# bfcomp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: cell_size.bf
include/: compiler.h  defines.h  functions.h  options.h  settings.h
src/: compiler.c  functions.c  main.c  options.c  settings.c
